--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-**/src/ConsoleApp1/bin
-**/src/ConsoleApp1/obj
+**/src/ConsoleWindow/bin
+**/src/ConsoleWindow/obj
 **/.ionide
 **/src/.vs
 **/src/packages
