--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">Roblox Luau Global Variable Fetcher</Value>
     </Setting>
     <Setting Name="VersionInfo" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">v.1.3.Beta</Value>
+      <Value Profile="(Default)">v1.3.Beta</Value>
     </Setting>
     <Setting Name="InstructionsLink" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Instructions link does not exist for beta version.</Value>
